<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="us.areaz.popularmovies.MainActivity">

    <item android:title="@string/sort_by_menu_group_title">
        <menu>
            <group>
                <item android:id="@+id/sort_by_popularity"
                      android:title="@string/sort_by_popularity" />
                <item android:id="@+id/sort_by_rating"
                      android:title="@string/sort_by_rating" />
            </group>
        </menu>
    </item>
    <item android:title="@string/show_menu_group_title">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/showAll"
                      android:title="@string/show_All"
                      android:checked="true"/>
                <item android:id="@+id/onlyFav"
                      android:title="@string/show_Favorites" />
            </group>
        </menu>
    </item>

</menu>
